--- a/src/components/Button/buttonCarrito/buttonCart.css
+++ b/src/components/Button/buttonCarrito/buttonCart.css
@@ -1,4 +1,17 @@
 .botonCarrito {
-  background-color: rgb(255, 255, 255);
-  margin-top: 30px;
+  border-radius: 8px;
+  border: 5px solid mediumseagreen;
+  font-family: inherit;
+  color: rgb(2, 2, 2);
+  background-color: orange;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+.botonCarrito:hover {
+  color: rgb(0, 0, 0);
+  border-color: orange;
+  background-color: aqua;
+  transition: color 0.3s ease;
+  transform: scale(1.1);
+  transition: transform 0.5s ease-in-out, background-color 0.5s ease-in-out;
 }
