--- a/src/components/pages/itemDetail/itemDetail.css
+++ b/src/components/pages/itemDetail/itemDetail.css
@@ -1,10 +1,24 @@
 .imgDetail {
-  width: 100vh;
-  height: 100vh;
+  width: 50vh;
+  height: 50vh;
   box-shadow: 20px 14px 10px rgba(99, 111, 216, 0.575);
+  margin-top: 50px;
 }
 
 .descripcionDetail {
-  background-color: rgba(128, 255, 0, 0.623);
   color: aliceblue;
+  font-size: larger;
+  font-family: "Courier";
+  margin: 100px;
+}
+h3,
+h4 {
+  color: aqua;
+}
+.todoItem {
+  display: flex;
+  justify-content: center;
+}
+.counter {
+  margin-top: 50px;
 }
